--- a/app/src/main/res/layout/activity_faq.xml
+++ b/app/src/main/res/layout/activity_faq.xml
@@ -14,14 +14,54 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="FAQ"
-            android:textSize="40sp"
+            android:text="FAQ: Questions fréquemment posées"
+            android:textSize="30sp"
             android:layout_marginTop="40dp"
             android:layout_marginHorizontal="35dp"
             android:textColor="@color/orange_secondary"
             android:fontFamily="@font/aleo"
             />
 
+        <com.example.miniprojet.ExpandableTextView
+            android:id="@+id/expandableTextView1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
 
+        <com.example.miniprojet.ExpandableTextView
+            android:id="@+id/expandableTextView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
+
+        <com.example.miniprojet.ExpandableTextView
+            android:id="@+id/expandableTextView3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
+
+        <com.example.miniprojet.ExpandableTextView
+            android:id="@+id/expandableTextView4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
+
+        <com.example.miniprojet.ExpandableTextView
+            android:id="@+id/expandableTextView5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
+
+        <com.example.miniprojet.ExpandableTextView
+            android:id="@+id/expandableTextView6"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
+
+        <com.example.miniprojet.ExpandableTextView
+            android:id="@+id/expandableTextView7"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
     </LinearLayout>
 </ScrollView>
