PDF file uploading test

--- a/app/src/main/res/layout/activity_demande.xml
+++ b/app/src/main/res/layout/activity_demande.xml
@@ -59,6 +59,7 @@
         />
 
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btnChooseFile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Pèce d’identité"
