--- a/app/src/main/res/layout/activity_faq.xml
+++ b/app/src/main/res/layout/activity_faq.xml
@@ -62,6 +62,7 @@
             android:id="@+id/expandableTextView7"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" />
+            android:orientation="vertical"
+            android:layout_marginBottom="50dp" />
     </LinearLayout>
 </ScrollView>
