--- a/app/src/main/res/layout/activity_faq.xml
+++ b/app/src/main/res/layout/activity_faq.xml
@@ -11,12 +11,21 @@
         android:layout_height="match_parent"
         tools:context=".DashboardActivity"
         android:orientation="vertical">
+        <ImageButton
+            android:id="@+id/back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="30dp"
+            android:src="@drawable/back"
+            />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="FAQ: Questions fréquemment posées"
             android:textSize="30sp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="10dp"
             android:layout_marginHorizontal="35dp"
             android:textColor="@color/orange_secondary"
             android:fontFamily="@font/aleo"
