--- a/app/src/main/res/layout/activity_support.xml
+++ b/app/src/main/res/layout/activity_support.xml
@@ -1,20 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".DashboardActivity"
     android:orientation="vertical">
+    <ImageButton
+        android:id="@+id/back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@null"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="30dp"
+        android:src="@drawable/back"
+        />
         <ImageView
             android:layout_width="120dp"
             android:layout_height="120dp"
-            android:src="@drawable/upload"
+            android:src="@drawable/send"
             android:layout_gravity="center"
             android:layout_marginTop="60dp"
             />
@@ -76,7 +84,7 @@
         android:layout_height="wrap_content"
         android:text="Envoyer"
         android:textSize="19sp"
-        android:drawableRight="@drawable/upload"
+        android:drawableRight="@drawable/send"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="10dp"
         android:layout_marginHorizontal="30dp"
@@ -90,21 +98,20 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Ou vous pouvez nous contactez via téléphone"
-        android:textSize="20sp"
-        android:layout_marginTop="40dp"
         android:layout_marginHorizontal="45dp"
-        android:textColor="@color/black"
+        android:layout_marginTop="40dp"
         android:fontFamily="@font/aleo"
-        />
+        android:text="Ou vous pouvez nous contactez via téléphone"
+        android:textColor="@color/black"
+        android:textSize="20sp" />
 
-        <Button
+    <Button
             android:id="@+id/telephone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="012345678"
             android:textSize="19sp"
-            android:drawableLeft="@drawable/upload"
+            android:drawableLeft="@drawable/phone"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="50dp"
             android:layout_marginHorizontal="50dp"
