--- a/app/src/main/res/layout/expandable_text_view.xml
+++ b/app/src/main/res/layout/expandable_text_view.xml
@@ -3,15 +3,15 @@
 
     <TextView
         android:id="@+id/questionTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/black"
         android:textSize="21sp"
         android:layout_marginTop="15dp"
         android:layout_marginHorizontal="45dp"
         android:fontFamily="@font/aleo"
-        android:drawableRight="@drawable/upload"
-        />
+        android:drawableRight="@drawable/drop_down"
+    />
 
     <TextView
         android:id="@+id/answerTextView"
