Page of details done, pdf downloader doesn't work yet

--- a/app/src/main/res/layout/activity_demande.xml
+++ b/app/src/main/res/layout/activity_demande.xml
@@ -26,6 +26,7 @@
         android:layout_marginHorizontal="35dp"
         android:textColor="@color/orange_secondary"
         android:fontFamily="@font/aleo"
+        android:textStyle="bold"
     />
 
         <TextView
@@ -37,6 +38,7 @@
             android:layout_marginTop="40dp"
             android:textColor="@color/orange_secondary"
             android:fontFamily="@font/aleo"
+            android:textStyle="bold"
             />
 
     <EditText
@@ -95,6 +97,7 @@
         android:layout_marginStart="35dp"
         android:textColor="@color/orange_secondary"
         android:fontFamily="@font/aleo"
+        android:textStyle="bold"
         />
 
     <EditText
