--- a/app/src/main/res/layout/activity_faq.xml
+++ b/app/src/main/res/layout/activity_faq.xml
@@ -29,6 +29,7 @@
             android:layout_marginHorizontal="35dp"
             android:textColor="@color/orange_secondary"
             android:fontFamily="@font/aleo"
+            android:textStyle="bold"
             />
 
         <com.example.miniprojet.ExpandableTextView
