--- a/app/src/main/res/layout/list_item_demande.xml
+++ b/app/src/main/res/layout/list_item_demande.xml
@@ -26,6 +26,7 @@
         android:textSize="16sp"
         android:layout_gravity="end"
         android:fontFamily="@font/aleo"
+        android:textStyle="bold"
     />
 
 </LinearLayout>
