--- a/app/src/main/res/drawable/back.xml
+++ b/app/src/main/res/drawable/back.xml
@@ -1,17 +1,16 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="40dp"
-    android:height="40dp"
-    android:viewportWidth="40"
-    android:viewportHeight="40">
+    android:width="34dp"
+    android:height="30dp"
+    android:viewportWidth="34"
+    android:viewportHeight="30">
   <path
-      android:pathData="M20,20m-20,0a20,20 0,1 1,40 0a20,20 0,1 1,-40 0"
+      android:pathData="M14.56,2L2,13.932L14.56,27.121"
+      android:strokeLineJoin="round"
+      android:strokeWidth="4"
+      android:fillColor="#00000000"
+      android:strokeColor="#333333"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M32,15.932C33.105,15.932 34,15.037 34,13.932C34,12.828 33.105,11.932 32,11.932V15.932ZM2,15.932H32V11.932H2V15.932Z"
       android:fillColor="#333333"/>
-  <path
-      android:pathData="M26.25,16.25H12.813V13.75H26.25C29.702,13.75 32.5,16.548 32.5,20V22.5C32.5,25.952 29.702,28.75 26.25,28.75H7.5V26.25H26.25C28.321,26.25 30,24.571 30,22.5V20C30,17.929 28.321,16.25 26.25,16.25Z"
-      android:fillColor="#ffffff"
-      android:fillType="evenOdd"/>
-  <path
-      android:pathData="M14.268,15L18.384,10.884L16.616,9.116L11.616,14.116C11.128,14.604 11.128,15.396 11.616,15.884L16.616,20.884L18.384,19.116L14.268,15Z"
-      android:fillColor="#ffffff"
-      android:fillType="evenOdd"/>
 </vector>
