--- a/app/src/main/res/drawable/checkbox_checked.xml
+++ b/app/src/main/res/drawable/checkbox_checked.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/yellow_primary" />
+    <solid android:color="@color/primary" />
     <!-- You can customize other attributes like radius, stroke, etc. -->
 </shape>
