--- a/app/src/main/res/drawable/up_down_background.xml
+++ b/app/src/main/res/drawable/up_down_background.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" android:padding="10dp">
-    <solid android:color="#7ffba500" />
+    <solid android:color="#96f8b042" />
     <corners android:radius="20dp" />
     <stroke
         android:width="2dp"
-        android:color="#35fba500" /> <!-- Red stroke color -->
+        android:color="#F8B042" />
 </shape>
