--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -1,12 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:adjustViewBounds="true"
+        android:maxHeight="0dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/backgrounddrawing" />
+
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     tools:context=".DashboardActivity"
     android:orientation="vertical">
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,7 +34,7 @@
             android:textSize="40sp"
             android:layout_marginTop="60dp"
             android:layout_marginHorizontal="35dp"
-            android:textColor="@color/orange_secondary"
+            android:textColor="@color/black"
             android:fontFamily="@font/aleo"
             android:textStyle="bold"
             />
@@ -34,12 +47,12 @@
             android:textSize="40sp"
             android:layout_marginBottom="60dp"
             android:layout_marginHorizontal="35dp"
-            android:textColor="@color/orange_secondary"
+            android:textColor="@color/black"
             android:fontFamily="@font/aleo"
             android:textStyle="bold"
             />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/creer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -47,9 +60,11 @@
             android:textSize="19sp"
             android:layout_marginHorizontal="50dp"
             android:paddingVertical="10dp"
-            android:backgroundTint="@color/yellow_primary"
-            android:textColor="@color/black"
+            android:background="@drawable/submit_button"
+            android:textColor="#fff"
             android:fontFamily="@font/aleo"
+            android:textAllCaps="false"
+            android:textStyle="bold"
             />
 
         <LinearLayout
@@ -57,7 +72,7 @@
             android:layout_height="match_parent"
             android:layout_marginHorizontal="35dp"
             android:layout_marginVertical="20dp"
-            android:background="@drawable/rounded_back1"
+            android:background="@drawable/apercu_background"
             android:orientation="vertical"
             android:paddingVertical="20dp">
 
@@ -68,7 +83,8 @@
                 android:fontFamily="@font/aleo"
                 android:text="Suivi des demandes"
                 android:textColor="@color/black"
-                android:textSize="26sp" />
+                android:textSize="26sp"
+                android:textStyle="bold"/>
 
             <TextView
                 android:id="@+id/empty_list"
@@ -78,10 +94,9 @@
                 android:layout_marginTop="80dp"
                 android:fontFamily="@font/aleo"
                 android:text="Pas de demandes"
-                android:textColor="@color/orange_secondary"
+                android:textColor="#C63115"
                 android:textSize="22sp"
                 android:visibility="gone" />
-
 
             <ListView
                 android:id="@+id/demande"
@@ -126,3 +141,4 @@
     </LinearLayout>
 
 </LinearLayout>
+</FrameLayout>
