--- a/app/src/main/res/layout/activity_demande_details.xml
+++ b/app/src/main/res/layout/activity_demande_details.xml
@@ -1,4 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:adjustViewBounds="true"
+        android:maxHeight="0dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/backgrounddrawing" />
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -13,7 +24,7 @@
             android:layout_height="wrap_content"
             android:background="@null"
             android:layout_marginTop="30dp"
-            android:layout_marginLeft="30dp"
+            android:layout_marginStart="22dp"
             android:src="@drawable/back"
             />
 
@@ -21,10 +32,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Détails de la demande"
-            android:textSize="32sp"
+            android:textSize="28sp"
             android:layout_marginTop="20dp"
             android:layout_marginHorizontal="35dp"
-            android:textColor="@color/orange_secondary"
+            android:textColor="@color/black"
             android:fontFamily="@font/aleo"
             android:textStyle="bold"
             />
@@ -33,11 +44,11 @@
             android:id="@+id/companyName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="32sp"
+            android:textSize="28sp"
             android:text="Company 1"
             android:layout_marginHorizontal="35dp"
             android:layout_marginBottom="40dp"
-            android:textColor="@color/orange_secondary"
+            android:textColor="@color/black"
             android:fontFamily="@font/aleo"
             android:textStyle="bold"
             />
@@ -47,8 +58,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:text="etat"
+            android:text="Etat de traitement"
             android:layout_marginHorizontal="50dp"
+            android:layout_marginBottom="10dp"
             android:layout_gravity="end"
             android:textColor="@color/black"
             android:fontFamily="@font/aleo"
@@ -56,15 +68,16 @@
             />
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Détails du demandeur"
             android:textSize="26sp"
             android:layout_marginHorizontal="35dp"
             android:layout_marginTop="0dp"
-            android:textColor="@color/orange_secondary"
+            android:textColor="@color/black"
             android:fontFamily="@font/aleo"
             android:textStyle="bold"
+            android:drawableEnd="@drawable/edit"
             />
 
         <TextView
@@ -77,7 +90,6 @@
             android:textColor="@color/black"
             android:fontFamily="@font/aleo"
             android:textStyle="bold"
-            android:drawableEnd="@drawable/edit"
             />
 
         <TextView
@@ -86,10 +98,14 @@
             android:layout_height="wrap_content"
             android:text="Passeport"
             android:textSize="18sp"
-            android:layout_marginHorizontal="50dp"
+            android:layout_marginHorizontal="35dp"
             android:layout_marginBottom="20dp"
             android:textColor="@color/black"
             android:fontFamily="@font/aleo"
+            android:background="@drawable/input_background"
+            android:paddingHorizontal="20dp"
+            android:paddingVertical="15dp"
+            android:textStyle="bold"
             />
 
         <TextView
@@ -102,7 +118,6 @@
             android:textColor="@color/black"
             android:fontFamily="@font/aleo"
             android:textStyle="bold"
-            android:drawableEnd="@drawable/edit"
             />
 
         <TextView
@@ -111,10 +126,14 @@
             android:layout_height="wrap_content"
             android:text="123456789"
             android:textSize="18sp"
-            android:layout_marginHorizontal="50dp"
+            android:layout_marginHorizontal="35dp"
             android:layout_marginBottom="20dp"
             android:textColor="@color/black"
             android:fontFamily="@font/aleo"
+            android:background="@drawable/input_background"
+            android:paddingHorizontal="20dp"
+            android:paddingVertical="15dp"
+            android:textStyle="bold"
             />
 
         <TextView
@@ -124,7 +143,7 @@
             android:textSize="26sp"
             android:layout_marginHorizontal="35dp"
             android:layout_marginTop="20dp"
-            android:textColor="@color/orange_secondary"
+            android:textColor="@color/black"
             android:fontFamily="@font/aleo"
             android:textStyle="bold"
             />
@@ -139,7 +158,6 @@
             android:textColor="@color/black"
             android:fontFamily="@font/aleo"
             android:textStyle="bold"
-            android:drawableEnd="@drawable/edit"
             />
 
         <TextView
@@ -148,10 +166,14 @@
             android:layout_height="wrap_content"
             android:text="Company 1"
             android:textSize="18sp"
-            android:layout_marginHorizontal="50dp"
+            android:layout_marginHorizontal="35dp"
             android:layout_marginBottom="20dp"
             android:textColor="@color/black"
             android:fontFamily="@font/aleo"
+            android:background="@drawable/input_background"
+            android:paddingHorizontal="20dp"
+            android:paddingVertical="15dp"
+            android:textStyle="bold"
             />
 
         <TextView
@@ -164,7 +186,6 @@
             android:textColor="@color/black"
             android:fontFamily="@font/aleo"
             android:textStyle="bold"
-            android:drawableEnd="@drawable/edit"
             />
 
         <TextView
@@ -173,10 +194,14 @@
             android:layout_height="wrap_content"
             android:text="Somewhere"
             android:textSize="18sp"
-            android:layout_marginHorizontal="50dp"
+            android:layout_marginHorizontal="35dp"
             android:layout_marginBottom="20dp"
             android:textColor="@color/black"
             android:fontFamily="@font/aleo"
+            android:background="@drawable/input_background"
+            android:paddingHorizontal="20dp"
+            android:paddingVertical="15dp"
+            android:textStyle="bold"
             />
 
         <TextView
@@ -189,7 +214,6 @@
             android:textColor="@color/black"
             android:fontFamily="@font/aleo"
             android:textStyle="bold"
-            android:drawableEnd="@drawable/edit"
             />
 
         <TextView
@@ -198,10 +222,14 @@
             android:layout_height="wrap_content"
             android:text="Cosmetiques"
             android:textSize="18sp"
-            android:layout_marginHorizontal="50dp"
+            android:layout_marginHorizontal="35dp"
             android:layout_marginBottom="20dp"
             android:textColor="@color/black"
             android:fontFamily="@font/aleo"
+            android:background="@drawable/input_background"
+            android:paddingHorizontal="20dp"
+            android:paddingVertical="15dp"
+            android:textStyle="bold"
             />
 
         <TextView
@@ -214,7 +242,6 @@
             android:textColor="@color/black"
             android:fontFamily="@font/aleo"
             android:textStyle="bold"
-            android:drawableEnd="@drawable/edit"
             />
 
         <TextView
@@ -223,10 +250,14 @@
             android:layout_height="wrap_content"
             android:text="123456789"
             android:textSize="18sp"
-            android:layout_marginHorizontal="50dp"
+            android:layout_marginHorizontal="35dp"
             android:layout_marginBottom="20dp"
             android:textColor="@color/black"
             android:fontFamily="@font/aleo"
+            android:background="@drawable/input_background"
+            android:paddingHorizontal="20dp"
+            android:paddingVertical="15dp"
+            android:textStyle="bold"
             />
 
         <TextView
@@ -239,7 +270,6 @@
             android:textColor="@color/black"
             android:fontFamily="@font/aleo"
             android:textStyle="bold"
-            android:drawableEnd="@drawable/edit"
             />
 
         <TextView
@@ -248,10 +278,14 @@
             android:layout_height="wrap_content"
             android:text="123456789"
             android:textSize="18sp"
-            android:layout_marginHorizontal="50dp"
+            android:layout_marginHorizontal="35dp"
             android:layout_marginBottom="20dp"
             android:textColor="@color/black"
             android:fontFamily="@font/aleo"
+            android:background="@drawable/input_background"
+            android:paddingHorizontal="20dp"
+            android:paddingVertical="15dp"
+            android:textStyle="bold"
             />
 
         <TextView
@@ -260,8 +294,8 @@
             android:text="Fichiers soumis"
             android:textSize="26sp"
             android:layout_marginHorizontal="35dp"
-            android:layout_marginTop="40dp"
-            android:textColor="@color/orange_secondary"
+            android:layout_marginTop="20dp"
+            android:textColor="@color/black"
             android:fontFamily="@font/aleo"
             android:textStyle="bold"
             />
@@ -275,21 +309,26 @@
             android:textColor="@color/black"
             android:fontFamily="@font/aleo"
             android:textStyle="bold"
-            android:drawableEnd="@drawable/edit"
             />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/idntFile"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Passeport.pdf"
             android:textSize="18sp"
-            android:layout_marginHorizontal="30dp"
+            android:layout_marginHorizontal="40dp"
+            android:layout_marginTop="5dp"
             android:layout_marginBottom="15dp"
-            android:background="@drawable/transparent_background"
             android:textColor="@color/black"
             android:fontFamily="@font/aleo"
+            android:gravity="start|center_vertical"
+            android:background="@drawable/up_down_background"
             android:drawableEnd="@drawable/download"
+            android:paddingHorizontal="22dp"
+            android:paddingVertical="15dp"
+            android:textAllCaps="false"
+            android:textStyle="bold"
             />
 
         <TextView
@@ -301,21 +340,26 @@
             android:textColor="@color/black"
             android:fontFamily="@font/aleo"
             android:textStyle="bold"
-            android:drawableEnd="@drawable/edit"
             />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/contratFile"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Contrat.pdf"
             android:textSize="18sp"
-            android:layout_marginHorizontal="30dp"
             android:layout_marginBottom="15dp"
-            android:background="@drawable/transparent_background"
+            android:layout_marginTop="5dp"
+            android:layout_marginHorizontal="40dp"
             android:textColor="@color/black"
             android:fontFamily="@font/aleo"
+            android:gravity="start|center_vertical"
+            android:background="@drawable/up_down_background"
             android:drawableEnd="@drawable/download"
+            android:paddingHorizontal="22dp"
+            android:paddingVertical="15dp"
+            android:textAllCaps="false"
+            android:textStyle="bold"
             />
 
         <TextView
@@ -327,21 +371,26 @@
             android:textColor="@color/black"
             android:fontFamily="@font/aleo"
             android:textStyle="bold"
-            android:drawableEnd="@drawable/edit"
             />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/fiscaleFile"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Fiscale.pdf"
             android:textSize="18sp"
-            android:layout_marginHorizontal="30dp"
+            android:layout_marginHorizontal="40dp"
+            android:layout_marginTop="5dp"
             android:layout_marginBottom="15dp"
-            android:background="@drawable/transparent_background"
             android:textColor="@color/black"
             android:fontFamily="@font/aleo"
+            android:gravity="start|center_vertical"
+            android:background="@drawable/up_down_background"
             android:drawableEnd="@drawable/download"
+            android:paddingHorizontal="22dp"
+            android:paddingVertical="15dp"
+            android:textAllCaps="false"
+            android:textStyle="bold"
             />
 
         <TextView
@@ -353,22 +402,28 @@
             android:textColor="@color/black"
             android:fontFamily="@font/aleo"
             android:textStyle="bold"
-            android:drawableEnd="@drawable/edit"
             />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/ribFile"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Rib.pdf"
             android:textSize="18sp"
-            android:layout_marginHorizontal="30dp"
-            android:layout_marginBottom="15dp"
-            android:background="@drawable/transparent_background"
+            android:layout_marginHorizontal="40dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="40dp"
             android:textColor="@color/black"
             android:fontFamily="@font/aleo"
+            android:gravity="start|center_vertical"
+            android:background="@drawable/up_down_background"
             android:drawableEnd="@drawable/download"
+            android:paddingHorizontal="22dp"
+            android:paddingVertical="15dp"
+            android:textAllCaps="false"
+            android:textStyle="bold"
             />
 
     </LinearLayout>
 </ScrollView>
+</FrameLayout>
