--- a/app/src/main/res/layout/activity_support.xml
+++ b/app/src/main/res/layout/activity_support.xml
@@ -1,4 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:adjustViewBounds="true"
+        android:maxHeight="0dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/backgrounddrawing" />
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -16,7 +27,7 @@
         android:layout_height="wrap_content"
         android:background="@null"
         android:layout_marginTop="30dp"
-        android:layout_marginLeft="30dp"
+        android:layout_marginLeft="22dp"
         android:src="@drawable/back"
         />
         <ImageView
@@ -31,10 +42,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Contactez-nous"
-            android:textSize="40sp"
+            android:textSize="30sp"
             android:layout_marginTop="40dp"
             android:layout_marginHorizontal="35dp"
-            android:textColor="@color/orange_secondary"
+            android:textColor="@color/black"
             android:fontFamily="@font/aleo"
             android:textStyle="bold"
             />
@@ -56,7 +67,7 @@
         android:layout_height="wrap_content"
         android:hint="Objet"
         android:textColorHint="#777"
-        android:background="@drawable/rounded_input"
+        android:background="@drawable/input_background"
         android:paddingHorizontal="20dp"
         android:paddingVertical="15dp"
         android:layout_marginTop="23dp"
@@ -70,7 +81,7 @@
         android:layout_height="200dp"
         android:hint="Contenu"
         android:textColorHint="#777"
-        android:background="@drawable/rounded_text_area"
+        android:background="@drawable/input_background"
         android:paddingHorizontal="20dp"
         android:paddingVertical="15dp"
         android:layout_marginTop="23dp"
@@ -79,7 +90,7 @@
         android:fontFamily="@font/aleo"
         />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/send_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -90,10 +101,13 @@
         android:layout_marginBottom="10dp"
         android:layout_marginHorizontal="30dp"
         android:paddingVertical="10dp"
-        android:backgroundTint="@color/yellow_primary"
+        android:paddingHorizontal="20dp"
+        android:background="@drawable/submit_button"
         android:layout_gravity="end"
-        android:textColor="@color/black"
+        android:textColor="#fff"
         android:fontFamily="@font/aleo"
+        android:textAllCaps="false"
+        android:textStyle="bold"
         />
 
     <TextView
@@ -106,7 +120,7 @@
         android:textColor="@color/black"
         android:textSize="20sp" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/telephone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -117,11 +131,15 @@
             android:layout_marginBottom="50dp"
             android:layout_marginHorizontal="50dp"
             android:paddingVertical="10dp"
-            android:backgroundTint="@color/yellow_primary"
+            android:paddingHorizontal="20dp"
+            android:background="@drawable/submit_button"
             android:layout_gravity="center"
-            android:textColor="@color/black"
+            android:textColor="#fff"
             android:fontFamily="@font/aleo"
+            android:textAllCaps="false"
+            android:textStyle="bold"
             />
 
 </LinearLayout>
 </ScrollView>
+</FrameLayout>
