--- a/app/src/main/res/layout/list_item_demande.xml
+++ b/app/src/main/res/layout/list_item_demande.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:background="@drawable/rounded_back1"
+    android:background="@drawable/green_background"
     android:padding="20dp"
     android:layout_marginBottom="24dp">
 
