--- a/app/src/main/res/drawable/apercu_background.xml
+++ b/app/src/main/res/drawable/apercu_background.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="34dp" />
-    <stroke android:width="4dp" android:color="#9DBDBA" />
+    <stroke android:width="4dp" android:color="#93AEC1" />
 </shape>
