--- a/app/src/main/res/layout/activity_faq.xml
+++ b/app/src/main/res/layout/activity_faq.xml
@@ -28,15 +28,22 @@
             android:layout_height="wrap_content"
             android:background="@null"
             android:layout_marginTop="30dp"
-            android:layout_marginLeft="22dp"
+            android:layout_marginStart="22dp"
             android:src="@drawable/back"
+            />
+        <ImageView
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:src="@drawable/question_icon"
+            android:layout_marginTop="20dp"
+            android:layout_gravity="center"
             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="FAQ: Questions fréquemment posées"
             android:textSize="30sp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
             android:layout_marginHorizontal="35dp"
             android:textColor="@color/black"
             android:fontFamily="@font/aleo"
