--- a/app/src/main/res/layout/activity_support.xml
+++ b/app/src/main/res/layout/activity_support.xml
@@ -27,15 +27,16 @@
         android:layout_height="wrap_content"
         android:background="@null"
         android:layout_marginTop="30dp"
-        android:layout_marginLeft="22dp"
+        android:layout_marginStart="22dp"
         android:src="@drawable/back"
         />
+
         <ImageView
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:src="@drawable/send"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:src="@drawable/support_client_icon"
             android:layout_gravity="center"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="20dp"
             />
 
         <TextView
@@ -43,7 +44,7 @@
             android:layout_height="wrap_content"
             android:text="Contactez-nous"
             android:textSize="30sp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="20dp"
             android:layout_marginHorizontal="35dp"
             android:textColor="@color/black"
             android:fontFamily="@font/aleo"
